# mcpd

./: .mcp.json  CLAUDE.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
mcpd/: __init__.py  cli.py  daemon.py  registry.py  server.py
services/: com.mcpd.daemon.plist  mcpd.service
src/: cli.rs  lib.rs  main.rs  mcp.rs  proxy.rs  registry.rs  server.rs
test-support/: mock_mcp_server.rs
tests/: integration.rs
