[package]
name = "mcpd"
version = "0.1.0"
edition = "2021"
description = "MCP daemon - aggregate multiple MCP tool servers into one"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Directories
dirs = "5"

# Path resolution
which = "7"
