[package]
name = "mcpd"
version = "1.0.4"
edition = "2024"
description = "Aggregates multiple MCP servers behind a single endpoint"
license = "MIT"
publish = true
repository = "https://github.com/xandwr/mcpd"
homepage = "https://www.xandwr.com/projects"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6.0.0"
which = "8.0.0"

[dev-dependencies]
tempfile = "3"

[features]
_test = []

[[bin]]
name = "mock-mcp-server"
path = "test-support/mock_mcp_server.rs"
required-features = ["_test"]
