[project]
name = "mcpd"
version = "0.1.0"
description = "MCP daemon for centralized tool registration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "mcp>=1.0",
]
license = { file = "LICENSE" }

[project.scripts]
mcpd = "mcpd.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
